--- a/templates/home.html
+++ b/templates/home.html
@@ -1,16 +1,24 @@
 <!doctype html>
 <html>
     <head>
-        <title>TEST</title>
+        <title>WHWN</title>
     </head>
 
     <body>
-        <p>Todays Prompt:</p>
-        <p>Testing bitchass</p>
-        <form>
-            <textarea id='input' rows="5" cols="50">
-            </textarea>
-            <input type="submit">
-        </form>
+        <p>Todays Prompt &#129312</p>
+        <p>What was the masogehaoieghosh</p>
+        <div class="center">
+            <form>
+                <textarea maxlength=200 id='textbox' rows="10" cols="25"></textarea>
+                <span id="char_count">200/200</span>
+                <input type="submit">
+            </form>
+        </div>
+        <p><a href="{{ url_for('history') }}" class="hugel" onclick=loadPage()>LEFT</a></p>
+        <p><a href="{{ url_for('friends') }}" class="huger" onclick="">RIGHT</p>
     </body>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',
+    filename='styles/main.css') }}">
+
+    <script src="js/main.js"></script>
 </html>
