--- a/templates/history.html
+++ b/templates/history.html
@@ -5,10 +5,11 @@
     </head>
 
     <body>
-        <form onsubmit="return false" class="center">
-            <input type="date" id="date">
+        <form class="center" method=post>
+            <input type="date" id="date" name="date">
+            <button type="submit">Go</button>
         </form>
-        <textarea id='textbox' rows="10" cols="25"></textarea>
+        <textarea readonly="true" id='textbox' rows="10" cols="25"></textarea>
         <p><a href="/" class="huger" onclick="">RIGHT</p>
     </body>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',
