ui updates + some functionality"

--- a/templates/friends.html
+++ b/templates/friends.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html>
     <head>
-        <title>WHWN</title>
+        <title>Write Here</title>
+        <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
     </head>
 
     <body>
-        <p><a href="/" class="hugel" onclick=loadPage()>LEFT</a></p>
+        <p><a href="/" class="hugel" onclick=loadPage()>ᐸ</a></p>
     </body>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',
     filename='styles/main.css') }}">
