--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -1,12 +1,16 @@
 body {
-    background-image: linear-gradient(to right, #131336, #171741, #1c1c4b, #202057, #252562);
+    background-image: linear-gradient(to right, #000000, #2832C2);
 }
 
 * {
     font-size: 30px;
-    font-weight: bold;
-    font-family: "Lexend Deca", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: "Noto Sans", sans-serif;
     color: white;
+}
+
+.title {
+    font-size: 50px;
+
 }
 
 
@@ -14,10 +18,11 @@ body {
     margin: auto;
     width: 50%;
     padding: 10px;
+    text-align: center;
 }
 
 #textbox {
-    background-color: transparent;
+    background-color: rgba(255, 255, 255, 0.05);
     font-weight: normal;
     align: center;
 
@@ -29,27 +34,23 @@ body {
 }
 
 .hugel {
-    font-size: 111px;
-    align: left;
-    position: absolute;
-    bottom: 10px;
-    left: 10px;
+    font-size: 90px;
+    float: left;
+    text-decoration: none;
 }
 
 .hugel:hover {
-    color: green;
+    color: #8490FF;
     cursor: pointer;
 }
 
 .huger:hover {
-    color: green;
+    color: #8490FF;
     cursor: pointer;
 }
 
 .huger {
-    font-size: 111px;
-    align: right;
-    position: absolute;
-    right: 10px;
-    bottom: 10px;
+    font-size: 90px;
+    float: right;
+    text-decoration: none;
 }
