--- a/templates/friends.html
+++ b/templates/friends.html
@@ -7,9 +7,10 @@
 
     <body>
         <p><a href="/" class="hugel" onclick=loadPage()>ᐸ</a></p>
+        <div class='center'>
+            <img src="/static/images/transparent_friends.png" width=100%/>
+        </div>
     </body>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',
     filename='styles/main.css') }}">
-
-    <script src="js/main.js"></script>
 </html>
