--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -4,7 +4,7 @@ body {
 
 * {
     font-size: 30px;
-    font-family: "Noto Sans", sans-serif;
+    font-family: "Verdana", sans-serif;
     color: white;
 }
 
