--- a/templates/friends.html
+++ b/templates/friends.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <p><a href="/" class="hugel" onclick=loadPage()>ᐸ</a></p>
+        <p><a href="/" class="hugel" id="bruh" onclick=loadPage()>ᐸ</a></p>
         <div class='center'>
             <img src="/static/images/transparent_friends.png" width=100%/>
         </div>
