--- a/templates/history.html
+++ b/templates/history.html
@@ -7,6 +7,7 @@
 
     <body>
         <div class="center">
+            <p class="title">Previous Entry Lookup</p>
             <form class="center" method=post>
                 <input type="date" id="date" name="date">
                 <button type="submit">Go</button>
