--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -10,7 +10,6 @@ body {
 
 .title {
     font-size: 50px;
-
 }
 
 .center {
@@ -29,14 +28,15 @@ body {
 
 #date {
     background-color: rgba(255, 255, 255, 0.3);
-    font-size: 75px;
+    font-size: 30px;
 }
 
 .hugel {
     font-size: 90px;
-    float: left;
     text-decoration: none;
-    position: fixed;
+    position: absolute;
+    top: 20px;
+    left: 20px;
     padding: 25px;
 }
 
@@ -48,12 +48,13 @@ body {
 .huger:hover {
     color: #8490FF;
     cursor: pointer;
-    padding: 25px;
 }
 
 .huger {
     font-size: 90px;
     float: right;
-    position: fixed;
+    position: absolute;
+    top: 20px;
+    right: 20px;
     text-decoration: none;
 }
