--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -1,5 +1,5 @@
 body {
-    background-image: linear-gradient(to right, #000000, #2832C2);
+    background-image: linear-gradient(to right, #000000, #636ce7);
 }
 
 * {
