--- a/templates/home.html
+++ b/templates/home.html
@@ -9,10 +9,10 @@
         <div class="center">
             <p class="title">Write Here</p>
             <p>Todays Prompt &#129312</p>
-            <p>What was the masogehaoieghosh</p>
+            <p>{{ output }}</p>
             <div class="center">
                 <form id=f method="post">
-                    <textarea form="f" name="text" maxlength=600 id='textbox' rows="8" cols="24"></textarea>
+                    <textarea form="f" name="text" maxlength=600 id='textbox' rows="8" cols="18"></textarea>
                     <button name="submit" type="submit">Submit</button>
                 </form>
             </div>
